--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,81 @@
 @import "tailwindcss";
 
 
+#app {
+	height: 100%;
+ }
+ html,
+ body {
+	position: relative;
+	height: 100%;
+ }
+ 
+ body {
+	background: #eee;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	color: #000;
+	margin: 0;
+	padding: 0;
+ }
+ 
+ .swiper {
+	width: 500px;
+	height: 600px;
+ }
+ .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+ 
+	/* Center slide text vertically */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+ }
+ 
+ .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+ }
+  
+
+
+
+ #app { height: 100% }
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiperr {
+  width: 80%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 400px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
+
+ 
