--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,13 @@
 	width: 500px;
 	height: 600px;
  }
+ @media (max-width: 640px) {
+	.swiper {
+	  width: 400px;
+	  height: 600px;
+	}
+ }
+ 
  .swiper-slide {
 	text-align: center;
 	font-size: 18px;
